--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "email-js": "^2.0.2",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
